{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "Controller",
            "id": "34a250f8-ab53-4ff9-8e51-b5a38cedb282",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "173d4b96-6e01-44b6-bbb1-709c8c7863be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "152c7611-b37e-443e-84c0-dbb5fdefae25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TimeStop",
                    "type": "Button",
                    "id": "34207d1b-63f1-48fa-9e36-f6af0b17c138",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Log",
                    "type": "Button",
                    "id": "996ba421-3907-4d8e-8137-28be087c964c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SceneForward",
                    "type": "Button",
                    "id": "6c5d52d3-3627-4f89-b666-a7e4c514ef0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SceneBackward",
                    "type": "Button",
                    "id": "debb1270-311e-4bf4-ba7a-4011dd49cf47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Targeting",
                    "type": "Button",
                    "id": "2a1fffbb-76b8-4564-979f-150c31465144",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Choose Target",
                    "type": "Value",
                    "id": "f7f00df9-6587-43cd-b5a8-2241622d1086",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "79f2ddaf-b582-482c-984c-c72139d8900b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d925bffe-89b3-4c68-9ad4-464907178999",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "161813e6-58bb-4733-8ae0-89dfe53229f5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0fa10e8-7a77-47e5-8786-6712f69ade3a",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "TimeStop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b11e145-92f7-48c5-8997-622217253859",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Log",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5391e2f0-a152-4e93-989b-af1343ccd628",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "SceneForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2753a3de-a8bb-49ec-95d1-46eb02939082",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "SceneBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "293d755c-58c0-4b07-8c77-cc07e3073612",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "Targeting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efa14a0d-8cfd-4139-9590-8ceeae83898f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultCon",
                    "action": "Choose Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "DefaultCon",
            "bindingGroup": "DefaultCon",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}